# Crosshair-Coordinates

./: .gitignore  README.md  pyproject.toml
scripts/: build.ps1
src/cursor_tracker/: app.py
